tests/ui/parser/using_operator_function_missing.sol
// ported-from: test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_function_name_missing.sol

using {as -} for uint; //~ ERROR: expected identifier
//~^ ERROR: expected one of
